--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">Customcollections</string>
+    <string name="author">Author</string>
+    <string name="title">Title</string>
+    <string name="publishedAt">PublishedAt</string>
 </resources>
